# vsix-extractor

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/recursive_file_looper/: mod.rs
src/vsix_extractor/: encoded_character_file_replacer.rs  file_decompressor.rs  manifest.rs  mod.rs  vsix_extracted_file_mover.rs
tests/resources/: manifest.json
tests/resources/multivsix/: noInstallDirPayload.vsix  withInstallDirPayload.vsix
