[package]
name = "vsix-extractor"
version = "0.1.0"
authors = ["Brian Frazho <befrazho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#using this until main zip has option for symlinks
zip = {git = "https://github.com/bfrazho/zip.git"}
tempfile = "3.2.0"
urlencoding = "1.3.1"
fs_extra = "1.2.0"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.61"
strip_bom = "1.0.0"

[dev-dependencies]
mockall = "0.9.0"